@@ -42,6 +42,8 @@ OCaml 4.04.0:
 
 - GPR#452: Make the output of ocamldep more stable
   (Alain Frisch)
+- GPR#613: make ocamldoc use -open arguments
+  (Florian Angeletti)
 - MPR#7248: have ocamldep interpret -open arguments in left-to-right order
   (Gabriel Scherer, report by Anton Bachin)
 
